--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,14 @@
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have onetitle: The 80/20 Solution
+  - jekyll-remote-theme # add this line to the plugins list if you already have onetitle: The 80/20 Solution
+  - jekyll-feed
 title: Eighty/Twenty
 description: .plan for Gordon Weakliem
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
+      author: "Gordon Weakliem"
