--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,5 @@ defaults:
     scope:
       path: "" # an empty string here means all files in the project
     values:
-      layout: "default"
+      layout: "post"
       author: "Gordon Weakliem"
