--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have onetitle: The 80/20 Solution
   - jekyll-feed
+  - jekyll-archives
 title: Eighty/Twenty
 description: .plan for Gordon Weakliem
 timezone: America/Denver
@@ -16,3 +17,8 @@ defaults:
     values:
       layout: "post"
       author: "Gordon Weakliem"
+jekyll-archives:
+  enabled: all
+  layout: "archive"
+  permalinks:
+    category: '/category/:name/'
